<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_pwm_board_msgs</name>
  <version>0.1.0</version>
  <description>
	  Controller for the Adafruit 16 channel PWM servo I2C board, hat, and similar PCA9685 based boards.
	  Provides absolute proportional PWM control as well as supports geometry_msgs/Twist.
  </description>
  <maintainer email="contact.vertueux@gmail.com">Virtuous</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
