<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>i2c_pwm_board_xmlrp</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="contact.vertueux@gmail.com">Virtuous</maintainer>
    <license>GPL-3.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>xmlrpcpp</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>xmlrpcpp</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
